# sk2-dropbox

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.c  main_server.c  server_list.txt
client/: .gitignore  build.gradle
client/gradle/wrapper/: gradle-wrapper.properties
client/src/main/java/app/: Main.java
client/src/main/java/app/controllers/: Home.java  Login.java
client/src/main/java/app/model/: FileController.java  FileInfo.java
client/src/main/java/app/socket/: Client.java  SocketMessage.java
client/src/main/resources/fxml/: home.fxml  login.fxml
files/user/: MobilePhones copy.xlsx
server/header/: client.h  global_data.h  server.h  socket_err_check.h  socket_io.h
server/source/: client.c  server.c  socket_err_check.c  socket_io.c
server2/: server_list.txt
server2/files/user/: replicate1.txt
